2013-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  More efficient cast from _Bool,
	* src/z80/peep.c:
	  Fix recognition of xor as writing a in peepholes.

2013-05-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* Small Device C Compiler 3.3.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.3.1

2013-05-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix long and long long comparison.

2013-05-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  STM8: Give up trying to fix big-endian bit-fields. Make bit-fields little-endian.

2013-05-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sim/ucsim/stm8.src/instcl.h,
	  sim/ucsim/stm8.src/inst.cc,
	  sim/ucsim/stm8.src/stm8mac.h,
	  sim/ucsim/stm8.src/glob.cc,
	  sim/ucsim/stm8.src/stm8.cc,
	  sdas/asstm8/stm8mch.c:
	  STM8: Patches by Valentin Dudouyt to fix simulator.
	* src/stm8/gen.c:
	  STM8: Fix conditional jump, address generation for on-stack variables.
	* device/lib/_mullong.c,
	  device/lib/_mulint.c,
	  device/lib/stm8/Makefile.in,
	  device/lib/_mulschar.c,
	  device/lib/_modschar.c,
	  device/lib/_divschar.c,
	  src/SDCCsymt.c,
	  src/stm8/main.c:
	  STM8: Multiplication and division fixes.

2013-05-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix offset in wide addition, fix handling of a in copy from registers to global, fix stack adjustment for large variables, fix large arithmetic signed right shift.

2013-05-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/INSTALL.txt: small update
	* support/scripts/repack_release.sh: added windows x64 setup

2013-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix bit-field access.
	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Fix handling of carry bit in negation in simulator.

2013-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  STM8: Fix endianness for initializers.
